KPT-2453 Add OptimizationFailure when TopicLeadershipDistributionGoal fails to find a solution